# RustApp

./: Cargo.toml  README.md  reserve.db
src/: main.rs  tables.rs
templates/: another.html  boot.html  index.html  tables.html  template.html
